<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    android:orientation="vertical"
    android:padding="18dp">

    <TextView
        android:id="@+id/username_title"
        android:text="@string/username_title"
        android:padding="10dp"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/yourusername"
        android:text="@string/yourusername"
        android:padding="10dp"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/email_title"
        android:text="@string/email_title"
        android:padding="10dp"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/youremail"
        android:text="@string/youremail"
        android:padding="10dp"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:gravity="center"-->
<!--        android:orientation="vertical" >-->

<!--        <TextView-->
<!--            android:id="@+id/verifymsg"-->
<!--            android:text="@string/verify_msg"-->
<!--            android:padding="10dp"-->
<!--            android:textSize="20sp"-->
<!--            android:textColor="@color/design_default_color_error"-->
<!--            android:gravity="center_horizontal"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content" />-->

<!--        <Button-->
<!--            android:id="@+id/verifyemail"-->
<!--            android:text="@string/verify_email"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content" />-->

<!--    </LinearLayout>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:orientation="vertical" >

<!--        <Button-->
<!--            android:id="@+id/edit_profile"-->
<!--            android:text="@string/edit_profile_text"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content" />-->

        <Button
            android:id="@+id/reset_password"
            android:text="@string/reset_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>