<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="18dp"
    tools:context=".MainActivity">

<!--    <androidx.cardview.widget.CardView-->
<!--        android:layout_width="170dp"-->
<!--        android:layout_height="170dp"-->
<!--        android:layout_marginBottom="20sp"-->
<!--        android:layout_gravity="center_horizontal"-->
<!--        android:minHeight="600dp"-->
<!--        app:cardCornerRadius="50dp">-->

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="40sp"
            app:srcCompat="@drawable/logo" />
<!--    </androidx.cardview.widget.CardView>-->

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_slab_bold"
        android:text="@string/title_text"
        android:layout_marginBottom="30sp"
        android:textSize="30sp" />

   <RelativeLayout
       android:id="@+id/relativeLayout"
       android:gravity="center_horizontal"
       android:layout_width="match_parent"
       android:layout_marginBottom="20sp"
       android:layout_height="wrap_content">

       <androidx.cardview.widget.CardView
           app:cardElevation="6dp"
           app:cardUseCompatPadding="true"
           app:cardCornerRadius="8dp"
           android:layout_width="match_parent"
           android:layout_height="90dp" >

           <TextView
               android:id="@+id/gratefulText"
               android:layout_gravity="center"
               android:text="@string/grateful_text"
               android:textSize="19sp"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content" />

       </androidx.cardview.widget.CardView>

   </RelativeLayout>

    //color got problem (get started)
    <Button
        android:id="@+id/startButton"
        android:text="@string/get_started_text"
        android:textColor="@color/design_default_color_primary"
        android:background="@android:color/transparent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>